--- a/index.html
+++ b/index.html
@@ -49,14 +49,17 @@
         <section class="nosotros">
             <div>
             <h2>Acerca de nosotros:</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid alias repellendus in amet odio nihil, ea doloremque modi soluta eum corrupti laboriosam! Magni eos ipsum quas possimus, nam asperiores minus.</p>
+            <p>Somos más que una tienda de mascotas: somos amantes de los animales. Nuestra pasión por los peludos, emplumados y escamosos miembros de la familia nos inspira a ofrecer lo mejor para su cuidado, felicidad y bienestar
+              Desde que abrimos nuestras puertas, nuestro compromiso ha sido claro: brindar productos de calidad, asesoramiento experto y un servicio personalizado que haga la diferencia en la vida de tu mascota. Entendemos que cada animal tiene necesidades únicas, por eso seleccionamos cuidadosamente alimentos, juguetes, accesorios y servicios que se adapten a ellos.
+              Además, somos un espacio de encuentro para quienes comparten el amor por los animales. Nos enorgullece ser parte de esta comunidad de cuidadores, dueños y amigos de mascotas, trabajando juntos para garantizar que tengan una vida sana y feliz.
+              Ya sea que necesites el mejor alimento, un juguete especial, o simplemente consejos para cuidar a tu fiel compañero, estamos aquí para ayudarte.</p>
             </div>
             <img src="./img/perros-nosotros.jpg" alt="perro-nosotros">
         </section>
         <section class="servicios">
           <div>
             <h2>Servicios:</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor dicta cum iusto sequi cupiditate pariatur culpa maiores labore nisi reprehenderit. Voluptate veniam, minima praesentium labore veritatis velit similique cum cumque.</p>
+            <p>Sabemos que tu mascota es un miembro más de la familia, por eso ofrecemos una amplia gama de servicios diseñados para su bienestar y felicidad. Queremos acompañarte en cada etapa de su vida, asegurándonos de que reciban el mejor cuidado.</p>
           </div>
           <img src="./img/perro-servicios.jpg" alt="servicios-perro">
         </section>
@@ -64,17 +67,17 @@
           <h2>Productos:</h2>
           <div class="productos-contenedor">
           <div>
-            <img src="./img/carne-card.jpg" alt="">
+            <img src="./img/carne-card.jpg" alt="" id="fotoCard1">
             <h3>Carne</h3>
             <a href="" class="boton">comprar</a>
           </div>
           <div>
-            <img src="./img/pescado-card.jpg" alt="">
+            <img src="./img/pescado-card.jpg" alt="" id="fotoCard2">
             <h3>Pescado</h3>
             <a href="" class="boton">comprar</a>
           </div>
           <div>
-            <img src="./img/pollo-card.jpg" alt="">
+            <img src="./img/pollo-card.jpg" alt="" id="fotoCard3">
             <h3>Pollo</h3>
             <a href="" class="boton">comprar</a>
           </div>
