--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./img/favicon.ico">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <title>Pet Shop | Alimentos para perros</title>
 </head>
 <body>
-    <header >
+    <header class="sticky-top">
     <nav class="navbar navbar-expand-lg bg-body-tertiary color-fondo ">
         <div class="container-fluid">
           <a href=""><img src="./img/cara-perro-logo.png" alt="logo-perro"></a>
@@ -83,11 +84,29 @@
           </div>
         </div>
         </section>
-        <section></section>
+        <section class="formulario">
+          <h2>Contacto:</h2>
+          <form action="">
+            <p>Nombre:</p>
+            <input type="text"> <br>
+            <p>Correo electronico:</p>
+            <input type="text"> <br>
+            <p>Asunto:</p>
+            <input type="text"> <br>
+            <p>Mensaje:</p>
+            <textarea name="" id="" cols="30" rows="10"></textarea> <br>
+            <p><input type="button" value="Enviar Datos"></p>
+          </form>
+        </section>
     </main>
 
     <footer>
       <a href=""><img src="./img/cara-perro-logo.png" alt=""></a>
+      <div>
+      <i class="bi bi-facebook"></i>
+      <i class="bi bi-instagram"></i>
+      <i class="bi bi-whatsapp"></i>
+    </div>
       <ul>
         <li><a href="">Inicio</a></li>
         <li><a href="">Nosotros</a></li>
@@ -95,6 +114,8 @@
         <li><a href="">Productos</a></li>
         <li><a href="">Contacto</a></li>
       </ul>
+
+      
     </footer>
 
 
