--- a/index.html
+++ b/index.html
@@ -100,15 +100,21 @@
     <section class="formulario">
       <h2>Contacto:</h2>
       <form>
+        <div>
         <label for="nombre">Nombre:
           <input type="text" id="nombre" placeholder="Ingrese su nombre" required>
         </label>
+      </div>
+      <div>
         <label for="email">Email:
           <input class="input-email" type="email" id="email" placeholder="Ingrese su email" required>
         </label>
+      </div>
+      <div>
         <label for="mensaje">Mensaje:
           <textarea name="" id="mensaje" cols="30" rows="5" placeholder="Escriba un mensaje" required></textarea>
         </label>
+      </div>
         <div class="button-container">
         <button type="submit">Enviar</button>
         <button type="reset">Reset</button>
